# arithmetic-parser

./: .gitignore  Addition.cpp  Addition.h  BinaryOperator.h  CMakeLists.txt  Division.cpp  Division.h  Expression.h  Multiplication.cpp  Multiplication.h  Parser.cpp  Parser.h  README.md  Subtraction.cpp  Subtraction.h  main.cpp
expressions/: Expression.h  Integer.cpp  Integer.h
expressions/operators/: Addition.cpp  Addition.h  BinaryOperator.h  Division.cpp  Division.h  Multiplication.cpp  Multiplication.h  Subtraction.cpp  Subtraction.h
test/: ParserTest.cpp  ValidInputsTest.cpp
test/parser/: InvalidInputsTest.cpp  ValidInputsTest.cpp
