cmake_minimum_required(VERSION 3.5.0)

set(PROJECT_VERSION "0.5.10")
project(arithmetic-parser VERSION ${PROJECT_VERSION} LANGUAGES CXX)

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

include_directories("${PROJECT_SOURCE_DIR}")

add_executable(parse ${PROJECT_SOURCE_DIR}/main.cpp)
